force-app/main/default/objects/Approval_Configuration__mdt/Approval_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>​Approval Configuration</label>
    <pluralLabel>​Approval Configurations</pluralLabel>
</CustomObject>