force-app/main/default/objects/Approval_Configuration__mdt/fields/Auto_Reject__c.field-meta.xml
<CustomField>
    <fullName>Auto_Reject__c</fullName>
    <description>Number of day after which approval will be rejected automatically.</description>
    <inlineHelpText>Number of day after which approval will be rejected automatically.</inlineHelpText>
    <label>Auto Reject</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>