force-app/main/default/objects/Approval_Configuration__mdt/fields/Rejection_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Template_Name__c</fullName>
    <label>Rejection Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>