force-app/main/default/objects/Approval_Configuration__mdt/fields/Reminder_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Template_Name__c</fullName>
    <label>Reminder Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>