force-app/main/default/objects/Approval_Configuration__mdt/fields/Send_Reminder_After__c.field-meta.xml
<CustomField>
    <fullName>Send_Reminder_After__c</fullName>
    <label>Send Reminder After</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>